--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@ img {
 }
 
 .search-section {
-    display: none;
+  display: none;
 }
 
 .logo img {
@@ -57,7 +57,6 @@ img {
   width: 100%;
   z-index: 5;
   background: rgba(0, 0, 0, 0.65);
-  transition: 0.2s;
 }
 
 .sidebar {
@@ -130,9 +129,9 @@ img {
 }
 
 .main-nav-wrapper ul li {
-  float: left;
   line-height: 70px;
   padding: 0 25px;
+  display: inline;
 }
 
 .main-nav-wrapper ul li a {
@@ -232,17 +231,19 @@ img {
   padding: 15px 25px;
 }
 
-
 .product-image {
   float: right;
   width: 73.23%;
   background: #e7a8c5;
 }
+
 .product-list ul li {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .product-image img {
   width: 100%;
+  height: 280px;
 }
 
 .card-product-details {
@@ -299,9 +300,13 @@ img {
 .add-to-cart a span {
   margin-left: 25px;
 }
+
 .add-to-cart a:hover {
-    color: #8ed1b7;
+  color: #8ed1b7;
+  background: url('../images/cart.svg') no-repeat;
+  background-size: contain;
 }
+
 /* page section starts */
 #page-section {
   margin: 10px 0;
@@ -316,8 +321,9 @@ img {
 .feature-product-info {
   background: #8ed1b7;
 }
+
 .feature-rate-info {
-    margin: 10px;
+  margin: 10px;
 }
 
 .feature-product-info h1 {
@@ -360,6 +366,7 @@ img {
 }
 
 .brand-title {
+  transform: rotateX(180deg) rotateY(180deg);
   position: absolute;
   right: 0;
   top: 15%;
@@ -397,7 +404,7 @@ img {
 }
 
 /* services-section */
-#service-section {
+#services-section {
   background: #202127;
 }
 
@@ -413,6 +420,7 @@ img {
 .service-image img {
   height: 59px;
   padding: 10px 40px;
+  margin: 0 auto;
 }
 
 .service-title {
@@ -446,24 +454,30 @@ img {
 }
 
 .about-us {
-  display: none;
+  /* display: none; */
 }
 
 .top-footer-wrapper .col {
   margin: 30px 0;
 }
-.company-details  {
-    font-family: 'Roboto',sans-serif;
-    font-weight: 300;
-    color: #7b7c85;
-    font-size: 13px;
+
+.footer-logo img {
+  margin: 0 auto;
+  width: 85px;
 }
-.company-details a{
-    color: #7b7c85;
+
+.company-details {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #7b7c85;
+  font-size: 12px;
+  display: none;
 }
-p.read-more {
-    margin-top: 20px;
+
+.company-details a {
+  color: #7b7c85;
 }
+
 .footer-nav ul {
   padding-right: 25px;
 }
@@ -543,102 +557,118 @@ footer .title {
   text-align: center;
 }
 
-
-
-
-
-
 /* responsive media queries */
-@media only screen and (min-width:768px){
-
+@media only screen and (min-width:768px) {
   .container {
-      padding: 10px 30px;
+    padding: 10px 30px;
   }
-  header .container {
-      background: url('../images/header-separator.png');
-      background-position: bottom;
+
+  header .container-fluid {
+    background: url('../images/header-separator.png');
+    background-position: bottom;
   }
-.top-header-section{
-  line-height: 25px;
-}
+
+  .top-header-section {
+    line-height: 25px;
+  }
+
   .search-section {
-      display: block;
-      float:left;
-      width: 70%;
+    display: block;
+    float: left;
+    width: 70%;
   }
+
   .logo-wrapper {
     width: 59.54%;
-}
-
-  .logo {float: right;padding-right: 20px;}
-  .search-section button {
-      background: transparent;
-      border: 0;
-      outline:none;
-      margin-right: 5px;
   }
+
+  .main-nav-wrapper ul li a:hover {
+    color: #ade1c5;
+  }
+
+  .logo {
+    float: right;
+    padding-right: 20px;
+  }
+
+  .search-section button {
+    background: transparent;
+    border: 0;
+    outline: none;
+    margin-right: 5px;
+  }
+
   .search-section button img {
     width: 12px;
     height: 12px;
-}
+  }
+
   .search-section input[type="text"] {
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 11px;
     color: #414141;
     line-height: 1.6;
-    border:0;
+    border: 0;
     padding: 5px 10px;
     background: transparent;
     width: calc(100% - 70px);
-}
+  }
 
-.search-section input::placeholder {
+  .search-section input::placeholder {
     color: #414141;
     letter-spacing: 1px;
-}
+  }
 
-.top-header-nav-wrapper li#toggle {
+  .top-header-nav-wrapper li#toggle {
     display: none;
-}
-.search-wrapper {
+  }
+
+  .search-wrapper {
     display: none;
-}
-.main-nav-wrapper{
-  display:block;
-}
-.main-nav-wrapper ul{
-    padding:0 100px;
-}
-.main-nav-wrapper ul li {
+  }
+
+  .main-nav-wrapper {
+    display: block;
+    text-align: center;
+  }
+
+  .main-nav-wrapper ul li {
     padding: 0 15px;
-}
-.mobile-menu-filter {
+  }
+
+  .mobile-menu-filter {
     display: none;
-}
-.filter-nav{
-  display:block;
-  float:left;
-}
-.filter-nav-wrapper .search-section {
+  }
+
+  .filter-nav {
+    display: block;
+    float: left;
+  }
+
+  .filter-nav-wrapper .search-section {
     float: right;
     width: auto;
-}
-.filter-nav-wrapper .search-section input[type="text"]{
-  width:auto;
-}
-.desktop-filter-menu {
-    padding: 10px 0 20px 0;
-}
+  }
 
-.desktop-filter-menu ul li {
+  .filter-nav-wrapper .search-section input[type="text"] {
+    width: auto;
+  }
+
+  .desktop-filter-menu {
+    padding: 10px 0 20px 0;
+  }
+
+  .desktop-filter-menu ul li {
     float: left;
     line-height: 20px;
     padding: 0 10px;
-}
-.desktop-filter-menu ul li.active {
-    color:#b5d9cc;
-}
-.desktop-filter-menu ul li a {
+  }
+
+  .desktop-filter-menu ul li.active {
+    color: #b5d9cc;
+  }
+
+  .desktop-filter-menu ul li a {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 11px;
@@ -646,78 +676,147 @@ footer .title {
     letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
-}
-.desktop-filter-menu ul li a:hover{
-      color:#b5d9cc;
-}
+  }
 
-.filter-nav-wrapper {
+  .desktop-filter-menu ul li a:hover {
+    color: #b5d9cc;
+  }
+
+  .filter-nav-wrapper {
     background: url(../images/filter-line.png)no-repeat;
     background-position: bottom;
     line-height: 40px;
-}
-.products-wrapper{
-  margin: 50px 0;
-}
+  }
 
-.product-list ul li {
+  .products-wrapper {
+    margin: 50px 0;
+  }
+
+  .product-list ul li {
     float: left;
-    width: 30.33%;
-}
-.product-list ul li:nth-child(3n+2) {
-    padding:0 30px;
-}
-.feature-rate-info {
-    float:left;
-    width:48%;
-}
+    width: 48.53%;
+  }
 
-.feature-product-info {
+  .product-list ul li:nth-child(even) {
+    padding-left: 20px;
+  }
+
+  .feature-rate-info {
+    float: left;
+    width: 50%;
+    margin: 0;
+  }
+
+  .feature-product-info {
     float: right;
-    width:48%;
-}
-#features-section {
+    width: 50%;
+  }
+
+  #features-section {
     margin-top: 50px;
-}
-.features-wrapper {
+  }
+
+  .features-wrapper {
     background: url('../images/feature-background-dots.png') no-repeat;
     background-position: right;
-}
-.info-content {
-    background: url('../images/feature-right-curl-line.png') no-repeat;
-    background-position: right;
-}
-#services-section ul li {
+  }
+
+  #services-section ul li {
     width: 25%;
-}
-.serveice-details {
+  }
+
+  .serveice-details {
     display: block;
-}
-.about-us {
+  }
+
+  .about-us {
     display: block;
-}
-.top-footer-wrapper .col {
+  }
+
+  .top-footer-wrapper .col {
     float: left;
     width: 30.33%;
-}
-.top-footer-wrapper >.col:nth-child(2) {
-    padding:0 25px;
-}
-.footer-nav ul {
-    width: 50%;
+  }
+
+  .top-footer-wrapper>.col:nth-child(2) {
+    padding: 0 25px;
+  }
+
+  .footer-nav ul {
+    width: 45%;
     padding: 0px;
-}
-.payement-menthods {
+  }
+
+  .payement-menthods {
     float: right;
     margin: 0;
-}
+  }
 
-.copyright {
+  .copyright {
     line-height: 65px;
     float: left;
     text-align: center;
+  }
+
+  .bottom-footer {
+    margin: 0;
+  }
+
+  .service-wrapper {
+    padding: 12px;
+  }
+
+  .footer-logo {
+    padding-top: 30px;
+  }
+
+  .footer-logo img {
+    margin: 0;
+  }
+
+  .company-details p {
+    padding: 20px 0;
+  }
+
+  p.read-more {
+    padding-top: 0;
+  }
+
+  .about-us.col {
+    width: 20%;
+  }
+
+  .footer-nav.col {
+    width: 40.66%;
+  }
+
+  .service-title {
+    padding: 5px 0;
+  }
 }
-.bottom-footer{
-  margin:0;
-}
+
+@media only screen and (min-width:992px) {
+  .service-wrapper {
+    padding: 10px;
+  }
+
+  .product-list ul li {
+    width: 31.1%;
+  }
+
+  .filter-nav-wrapper .search-section input::placeholder {
+    text-align: left;
+  }
+
+  .product-list ul li:nth-child(even) {
+    padding-left: 0;
+  }
+
+  .product-list ul li:nth-child(3n+2) {
+    padding: 0px 30px;
+  }
+
+  .product-menu ul li:nth-child(3n+2) {
+    padding: 0px 25px;
+  }
 }
